Cambiados nombres, Repository y Delete
Se cambio HTTPDelete por HTTPGet porque no estaba funcionando, despues voy a ver si lo puedo solucionar.
Tambien se cambio el Repository para que reciba la configuration y inicie un context cuando lo necesite.
Se cambiaron dos nombres de metodos mal escritos.
